Update DFO branch

--- a/content/barrier-prioritization.qmd
+++ b/content/barrier-prioritization.qmd
@@ -87,7 +87,7 @@ gain <- py$gain
 
 ## Bulkley River Watershed Barrier Prioritization Summary {-}
 
-The primary conservation outcome of the WCRP is the remediation of barriers to connectivity in the Bulkley River watershed. To achieve Goals 1 and 2 in this plan, it is necessary to prioritize and identify a suite of barriers that, if remediated, will provide access to a minimum of 89.59 km of spawning habitat and 168.29 km of rearing habitat (@tbl-table16):
+The primary conservation outcome of the WCRP is the remediation of barriers to connectivity in the Bulkley River watershed. To achieve Goals 1 and 2 in this plan, it is necessary to prioritize and identify a suite of barriers that, if remediated, will provide access to a minimum of 20.49 km of spawning habitat and 29.36 km of rearing habitat (@tbl-table16):
 
 
 ```{python echo=FALSE}
@@ -159,7 +159,8 @@ ft <- color(ft, color = "white", part = "header")
 ft <- set_caption(ft)
 ft <- align_text_col(ft, align = "left", header = TRUE)
 ft <- align_nottext_col(ft, align = "left", header = TRUE)
-ft |> autofit() 
+ft <- width(ft, width = 1.5)
+ft 
 ```
 
 ```{r intermediate, echo = FALSE, results = 'asis'}
@@ -178,7 +179,8 @@ ft <- color(ft, color = "white", part = "header")
 ft <- set_caption(ft)
 ft <- align_text_col(ft, align = "left", header = TRUE)
 ft <- align_nottext_col(ft, align = "left", header = TRUE)
-ft |> autofit() 
+ft <- width(ft, width = 0.8)
+ft
 ```
 
 
@@ -198,5 +200,6 @@ ft <- color(ft, color = "white", part = "header")
 ft <- set_caption(ft)
 ft <- align_text_col(ft, align = "left", header = TRUE)
 ft <- align_nottext_col(ft, align = "left", header = TRUE)
-ft |> autofit() 
+ft <- width(ft, width = 0.7)
+ft 
 ```
