--- a/content/connectivity-status.qmd
+++ b/content/connectivity-status.qmd
@@ -1,3 +1,16 @@
+```{python echo=FALSE}
+#| echo: false
+import warnings
+import pandas as pd
+import numpy as np
+import python.api_calls as api
+import python.connectivity_assess as conn_table
+
+warnings.filterwarnings('ignore')
+
+
+```
+
 # Connectivity Status Assessment and Goals {-}
 
 ## Key Ecological Attributes and Current Connectivity Status {-}
@@ -6,136 +19,18 @@ The planning team devised two Key Ecological Attributes (KEAs) and associated in
 
 The current connectivity status assessment relies on GIS analyses to map known and modelled barriers to fish passage, identify stream reaches that have potential spawning and rearing habitat, estimate the proportion of habitat that is currently accessible to target species, and prioritize barriers for field assessment that would provide the greatest gains in connectivity. To support a flexible prioritization framework to identify priority barriers in the watershed, two assumptions are made: 1) any modelled (i.e., passability status is unknown) or partial barriers are treated as complete barriers to passage and 2) the habitat modelling is binary, it does not assign any habitat quality values. As such, the current connectivity status will be refined over time as more data on habitat and barriers are collected. For more detail on how the connectivity status assessments were conducted, see [Supplementary Information](supplementary-information.qmd).
 
-```{python}
-#| echo: false
-#| warning: false
-
-import requests
-import json
-import pandas
-
-def barrier_extent(barrier_type):
-
-    request = 'https://cabd-pro.cwf-fcf.org/bcfishpass/functions/postgisftw.wcrp_barrier_extent/items.json?watershed_group_code=BULK&barrier_type=' + barrier_type
-
-    response_api = requests.get(request)
-    parse = response_api.text
-    result = json.loads(parse)
-
-    blocked_km = result[0]['all_habitat_blocked_km']
-    blocked_pct = result[0]['extent_pct']
-
-    return blocked_km, blocked_pct
-
-def barrier_count(barrier_type):
-    request = 'https://cabd-pro.cwf-fcf.org/bcfishpass/functions/postgisftw.wcrp_barrier_count/items.json?watershed_group_code=BULK&barrier_type=' + barrier_type
-
-    response_api = requests.get(request)
-    parse = response_api.text
-    result = json.loads(parse)
-
-    n_passable = result[0]['n_passable']
-    n_barrier = result[0]['n_barrier']
-    n_potential = result[0]['n_potential']
-    n_unknown = result[0]['n_unknown']
-
-    sum_bar = (n_passable, n_barrier, n_potential, n_unknown)
-
-    return n_passable, n_barrier, n_potential, n_unknown, sum(sum_bar)
-
-def barrier_severity(barrier_type):
-
-    request = 'https://cabd-pro.cwf-fcf.org/bcfishpass/functions/postgisftw.wcrp_barrier_severity/items.json?watershed_group_code=BULK&barrier_type=' + barrier_type
-
-    response_api = requests.get(request)
-    parse = response_api.text
-    result = json.loads(parse)
-
-    n_assessed_barrier = result[0]['n_assessed_barrier']
-    n_assess_total = result[0]['n_assess_total']
-    pct_assessed_barrier = result[0]['pct_assessed_barrier']
-
-    return n_assessed_barrier, n_assess_total, pct_assessed_barrier
-
-def watershed_connectivity(habitat_type):
-
-    request = 'https://cabd-pro.cwf-fcf.org/bcfishpass/functions/postgisftw.wcrp_habitat_connectivity_status/items.json?watershed_group_code=BULK&habitat_type=' + habitat_type
-
-    response_api = requests.get(request)
-    parse = response_api.text
-    result = json.loads(parse)
-
-    connect_stat = result[0]['connectivity_status']
-
-    return str(round(connect_stat,2))
-
-num_dam = barrier_severity('DAM')[1]
-km_dam = barrier_extent('DAM')[0]
-pct_dam = barrier_extent('DAM')[1]
-resource_km = barrier_extent('ROAD, RESOURCE/OTHER')[0]
-resource_pct = round(barrier_extent('ROAD, RESOURCE/OTHER')[1])
-demo_km = barrier_extent('ROAD, DEMOGRAPHIC')[0]
-demo_pct = round(barrier_extent('ROAD, DEMOGRAPHIC')[1])
-resource_sev = round(barrier_severity('ROAD, RESOURCE/OTHER')[2])
-demo_sev = round(barrier_severity('ROAD, DEMOGRAPHIC')[2])
-sum_road = barrier_severity('ROAD, RESOURCE/OTHER')[1] + barrier_severity('ROAD, DEMOGRAPHIC')[1]
-
-```
-
 ```{python echo=FALSE}
 #| label: tbl-connectivity
 #| tbl-cap: "Connectivity status assessment for spawning (a) and rearing (b) habitat in the Bulkley River watershed. The two KEAs - Accessible Spawning Habitat and Accessible Rearing Habitat - are evaluated by dividing the length of linear habitat (of each type) that is currently accessible to target species by the total length of all linear habitat (of each type) in the watershed."
 #| warning: false
 #| echo: false
 
-import pandas as pd
-import numpy as np
-import matplotlib as mpl
-import warnings
+df = conn_table.make_assess_table("Andromous Salmon", "Available Spawning Habitat", "% of total spawning habitat", 50, 75, 90, api.connect_spawn)
+df
 
-warnings.filterwarnings('ignore')
-
-df = pd.DataFrame({"Target Species":["Andromous Salmon"," "],
-                   "KEA":["Available Spawning Habitat"," "],
-                   "Indicator":["% of total spawning habitat","Current Status:"],
-                   "Poor":["<50%"," "],
-                   "Fair":["51-75%"," "],
-                   "Good":["76-90%", watershed_connectivity("SPAWNING")],
-                   "Very Good":[">90%"," "]  # watershed_connectivity("ALL")]
-                   })
-
-
-def highlighttab7(val):
-    red = '#ff0000;'
-    yellow = '#ffff00;'
-    lgreen = '#92d050;'
-    dgreen = '#03853e;'
-    
-    def is_float(value):
-        try:
-            float(value)
-            return True
-        except ValueError:
-            return False
-
-    if val=="<50%" : color = red
-    elif val[0:].isdigit() and int(val) < 50 : color = red
-    elif val=="51-75%": color = yellow
-    elif val[0:].isdigit() and (int(val) >= 51 and int(val) < 76) : color = lgreen 
-    elif val=="76-90%"  : color = lgreen
-    elif is_float(val) and (float(val) >= 76 and float(val) < 90) : color = lgreen 
-    elif val ==">90%": color = dgreen
-    elif val[0:].isdigit() and int(val) >= 90 : color = dgreen 
-    elif val == "Current Status:" : return "font-weight: bold"
-    else: color = 'white'
-    return 'background-color: %s' % color
-
-df.style.applymap(highlighttab7).set_table_styles(
-   [{
-       'selector': 'th',
-       'props': [('background-color', '#008270'),('text-align', 'left')]
-   }]).hide()
 ```
+
+
 
 **Comments:** Indicator rating definitions are based on the consensus decisions of the planning team. The current status is based on the CWF Barrier Prioritization Model output, which is current as of October 2022.
 
@@ -143,62 +38,19 @@ df.style.applymap(highlighttab7).set_table_styles(
 #| warning: false
 #| echo: false
 
-#creating table 7
-import pandas as pd
-import numpy as np
-import matplotlib as mpl
-
-
-warnings.filterwarnings('ignore')
-
-df = pd.DataFrame({"Target Species":["Andromous Salmon",""],
-                   "KEA":["Available Rearing Habitat",""],
-                   "Indicator":["% of total rearing habitat","Current Status:"],
-                   "Poor":["<50%"," "],
-                   "Fair":["51-75%",watershed_connectivity("REARING")],
-                   "Good":["76–90%"," "],
-                   "Very Good":[">90%"," "]
-                   })
-
-def highlighttab7b(val):
-    red = '#ff0000;'
-    yellow = '#ffff00;'
-    lgreen = '#92d050;'
-    dgreen = '#03853e;'
-    
-    def is_float(value):
-        try:
-            float(value)
-            return True
-        except ValueError:
-            return False
-
-    if val=="<50%" : color = red
-    elif val[0:].isdigit() and int(val) < 50 : color = red
-    elif val=="51-75%": color = yellow
-    elif is_float(val) and (float(val) >= 51 and float(val) < 75) : color = yellow 
-    elif val=="76–90%"  : color = lgreen
-    elif val[0:].isdigit() and (int(val) >= 76 and int(val) < 90) : color = lgreen 
-    elif val ==">90%": color = dgreen
-    elif val[0:].isdigit() and int(val) >= 90 : color = dgreen 
-    elif val == "Current Status:" : return "font-weight: bold"
-    else: color = 'white'
-    return 'background-color: %s' % color
-
-df.style.applymap(highlighttab7b).set_table_styles(
-   [{
-       'selector': 'th',
-       'props': [('background-color', '#008270'),('text-align', 'left')]
-   }]).hide()
+df = conn_table.make_assess_table("Andromous Salmon", "Available Rearing Habitat", "% of total rearing habitat", 50, 75, 90, api.connect_rear)
+df
 
 
 ```
+
+
 
 **Comments:** Indicator rating definitions are based on the consensus decisions of the planning team. The current status is based on the CWF Barrier Prioritization Model output, which is current as of October 2022. 
 
 
 ## Goals {-}
-
+`{\tiny`{=latex}
 ```{python echo=FALSE}
 #| label: tbl-goals
 #| tbl-cap: "Goals to improve spawning (1) and rearing (2) habitat connectivity for target species in the Bulkley River watershed over the lifespan of the WCRP (2021-2031). The goals were established through discussions with the planning team and represent the resulting desired state of connectivity in the watershed. The goals are subject to change as more information and data are collected over the course of the plan timeline (e.g., the current connectivity status is updated based on barrier field assessments)."
@@ -213,8 +65,8 @@ import pandas as pd
 import numpy as np
 
 df = pd.DataFrame({"Goal #": [1,2],
-                   "Goal": ["By 2031, the percent (%) of total linear spawning habitat accessible to anadromous salmonids will increase from 87.9% to 95% within the Bulkley River watershed (i.e., reconnect at least 89.59 km of spawning habitat).",
-                            "By 2031, the percent (%) of total linear rearing habitat accessible to anadromous salmonids will increase from 71.96% to 80% within the Bulkley River watershed (i.e., reconnect at least 168.29 km of rearing habitat). "]
+                   "Goal": ["By 2031, the percent (%) of total linear spawning habitat accessible to anadromous salmonids will increase from "+ str(api.watershed_connectivity("SPAWNING")[0]) +"% to 95% within the Bulkley River watershed (i.e., reconnect at least "+str(round(api.gain_spawn))+" km of spawning habitat).",
+                            "By 2031, the percent (%) of total linear rearing habitat accessible to anadromous salmonids will increase from "+str(api.watershed_connectivity("REARING")[0])+"% to 80% within the Bulkley River watershed (i.e., reconnect at least "+str(round(api.gain_rear))+" km of rearing habitat). "]
                     })
 
 data = df.style.hide().set_properties(**{'text-align': 'left'})
@@ -226,28 +78,8 @@ data.set_table_styles(
    }])
 
 ```
+`}`{=latex}
 
 
-
-```{r echo=FALSE}
-#| echo: false
-#| include: true
-#| warning: false
-
-library(reticulate)
-
-
-num_dam <- py$num_dam
-km_dam <- py$km_dam
-pct_dam <- py$pct_dam
-resource_km <- py$resource_km
-resource_pct <- py$resource_pct
-demo_km <- py$demo_km
-demo_pct <- py$demo_pct
-resource_sev <- py$resource_sev
-demo_sev <- py$demo_sev
-sum_road <- py$sum_road
-
-```
 
 
