--- a/content/supplementary-information.qmd
+++ b/content/supplementary-information.qmd
@@ -13,6 +13,7 @@ The following situation model was developed by the WCRP partnership to “map”
 Effectiveness evaluation of identified conservation strategies and associated actions to improve connectivity for target species in the Bulkley River watershed. The planning team identified four broad strategies to implement through this WCRP, 1) barrier remediation, 2) barrier prevention, 3) strengthen Indigenous connections to land and water, and 4) planning and progress tracking. Individual actions were qualitatively evaluated based on the anticipated effect each action will have on realizing on-the-ground gains in connectivity. Effectiveness ratings are based on a combination of "Feasibility and "Impact", Feasibility is defined as the degree to which the project team can implement the action within realistic constraints (financial, time, ethical, etc.) and Impact is the degree to which the action is likely to contribute to achieving one or more of the goals established in this plan.
 
 ## Strategy 1: Barrier Remediation {-}
+`{\tiny`{=latex}
 ```{python echo=FALSE}
 #| label: tbl-S1
 #| tbl-cap: "Strategy 1"
@@ -52,9 +53,11 @@ data.set_table_styles(
    }])
 
 ```
-
+`}`{=latex}
 
 ## Strategy 2: Barrier Prevention {-}
+
+`{\tiny`{=latex}
 ```{python echo=FALSE}
 #| label: tbl-S2
 #| tbl-cap: "Strategy 2"
@@ -94,9 +97,11 @@ data.set_table_styles(
    }])
 
 ```
-
+`}`{=latex}
 
 ## Strategy 3: Strengthen Indigenous Connections to Land and Water {-}
+
+`{\tiny`{=latex}
 ```{python echo=FALSE}
 #| label: tbl-S3
 #| tbl-cap: "Strategy 3"
@@ -136,9 +141,11 @@ data.set_table_styles(
    }])
 
 ```
-
+`}`{=latex}
 
 ## Strategy 4: Planning and Progress Tracking {-}
+
+`{\tiny`{=latex}
 ```{python echo=FALSE}
 #| label: tbl-S4
 #| tbl-cap: "Strategy 4"
@@ -160,6 +167,7 @@ data.set_table_styles(
    }])
 
 ```
+`}`{=latex}
 
 ## Theories of Change & Objectives {-}
 
@@ -183,5 +191,6 @@ ft <- flextable(data)
 ft <- bg(ft, bg = "#008270", part = "header")
 ft <- color(ft, color = "white", part = "header")
 ft <- set_caption(ft)
-ft |> autofit() 
+ft <- width(ft, width = 3)
+ft 
 ```
