--- a/content/connectivity-status.qmd
+++ b/content/connectivity-status.qmd
@@ -11,7 +11,7 @@ warnings.filterwarnings('ignore')
 
 # Connectivity Status Assessment and Goals {-}
 
-## Key Ecological Attributes and Current Connectivity Status {-}
+## Connectivity Status Assessment {-}
 
 The planning team devised two Key Ecological Attributes (KEAs) and associated indicators to assess the current connectivity status of the watershed – Accessible Spawning Habitat and Accessible Rearing Habitat (@tbl-connectivity). KEAs are the key aspects of anadromous salmonid ecology that are being targeted by this WCRP. The connectivity status for the Anadromous Salmonid KEAs were used to establish goals to improve habitat connectivity in the watershed and will be the baseline against which progress is tracked over time. 
 
