Bulkley_wcrp_december2024_
updates to Bulkley WCRP

--- a/content/work-planning.qmd
+++ b/content/work-planning.qmd
@@ -1,8 +1,25 @@
 # Work Planning {-}
 
-## Annual Progress Report {-}
+## Annual Progress Update {-}
 
 One priority barrier in the Bulkley watershed was removed on McDowell Creek at Woodmere Nursery in summer 2023. This crossing was replaced with a clearspan bridge and opens up approximately 200 m of seasonal off-channel habitat for salmonids during periods of high flow. The Ministry of Transportation and Infrastructure has been working with local partners to advance designs for barriers on Trib to Buck Creek, Helps Creek, Thompson Creek and Gramophone Creek. The Office of the Wet’suwet’en has hired a part-time staff to help with fish passage coordination in the Bulkley watershed. In addition, efforts have been made by CWF and local partners to build a campaign around Station Creek, to convince the BC government to invest in an appropriate crossing at Highway 16.
+
+## Annual Work Plan
+```{r keyact, echo = FALSE, results = 'asis'}
+#| label: tbl-progress
+#| tbl-cap: "2024-2025 Work Plan"
+#| warning: false
+
+library("flextable")
+
+data <- read.csv("data/progress.csv", check.names=FALSE)
+ft <- flextable(data)
+ft <- bg(ft, bg = "#008270", part = "header")
+ft <- color(ft, color = "white", part = "header")
+ft <- set_caption(ft)
+ft <- width(ft, width = 1.5)
+ft
+```
 
 ## Operational Plan {-}
 
@@ -36,6 +53,8 @@ def highlighttab7(val):
 
 ```
 
+
+`{\tiny`{=latex}
 ```{python opplan, echo=FALSE}
 #| label: tbl-opplan
 #| tbl-cap: "Operational plan to support the implementation of strategies and actions to improve connectivity for target species in the Bulkley River watershed."
@@ -65,4 +84,4 @@ data.set_table_styles(
    }])
 
 ```
-## Annual Work Plan {-}
+`}`{=latex}
