--- a/content/barrier-prioritization.qmd
+++ b/content/barrier-prioritization.qmd
@@ -17,13 +17,10 @@ source("Rscripts/table_formatting.R")
 
 ```
 
-# Barrier Prioritization {-}
+# Structure Prioritization {-}
 
-
-## Bulkley River Watershed Barrier Prioritization Summary {-}
-
-The primary conservation outcome of the WCRP is the remediation of barriers to connectivity in the Bulkley River watershed. To achieve Goals 1 and 2 in this plan, it is necessary to prioritize and identify a suite of barriers that, if remediated, will provide access to a minimum of 86 km of spawning habitat and 211 km of rearing habitat (@tbl-table16):
-
+## Field Assessment Ranking Process {-}
+A primary outcome of the WCRP will be the rehabilitation of barriers to connectivity in the Bulkley River Watershed. To achieve the goals in this plan, it is necessary to identify a suite of barriers that, if rehabilitated, will provide access to a minimum of 86 km of spawning habitat and 211 km of rearing habitat (@tbl-table16):
 
 ```{python echo=FALSE}
 #| label: tbl-table16
@@ -67,19 +64,31 @@ styled_df.set_table_styles(table_styles)
 
 ```
 
-The barrier prioritization process comprises three stages:
 
-- Stage 1: preliminary barrier list
+After all existing data and knowledge are collated for known and modelled crossings, an iterative ranking process is conducted to help confirm barriers to target for rehabilitation to meet the goals. The ranking process is primarily used to guide field assessments and maximize efficiency in ground truthing data inputs and model outputs, while providing a secondary purpose to evaluate the relative key habitat gains of confirmed barriers in the watershed. This process, combined with input from local knowledge holders and experts, is used to develop field plans for assessing barriers that have the potential to block the most key habitat in the watershed.
+Field assessments are based on the BC Fish Passage Strategic Approach (add reference ) and can include a barrier assessment (i.e., evaluating passability of the structure), a habitat confirmation (i.e., evaluation of whether the upstream habitat is suitable for the focal species and whether there are other undocumented anthropogenic or natural barriers upstream or downstream), or a detailed habitat investigation (e.g., a fish passage study or further in-depth analysis of habitat features in a waterbody).
+The ranking process accounts for the long-term and immediate potential habitat gains potentially offered by each structure to identify structures that maximize long-term and immediate potential to improve key habitat connectivity in the watershed. All structures in the watershed (excluding those confirmed as passable) are ranked in each iteration of the ranking process. Details of the ranking process used to guide field assessments can be found in Appendix XX.
 
-- Stage 2: intermediate barrier list
 
-- Stage 3: priority barrier list
+## Structure Prioritization Summary {-}
 
-Initially, the barrier prioritization analysis ranked all barriers in the watershed by the amount of habitat blocked to produce a "preliminary barrier list", which also accounted for assessing "sets" of barriers for which remediation could be coordinated to maximize connectivity gains. From this list, the top-ranking subset of barriers - comprising more barriers than are needed to achieve the goals - is selected to produce an "intermediate barrier list". Barriers that did not rank highly in the model results, but were identified as priority barriers by the local partners were also added to the intermediate barrier list. A longer list of barriers is needed due to the inherent assumptions and uncertainty in the connectivity and habitat models and gaps in available data. Barriers that have been modelled (i.e., points where streams and road/rail networks intersect) are assumed to be barriers until field verification is undertaken and structures that have been assessed as "potential" barriers (e.g., may be passable at certain flow levels or for certain life history stages) require further investigation before a definitive remediation decision is made. Additionally, the habitat model identifies stream segments that have the potential to support spawning or rearing habitat for target species but does not attempt to quantify habitat quality or suitability (see Appendix B), which will require additional field verification once barrier assessments have completed. As such, the intermediate barrier list below (@tbl-intermediate) should be considered as a starting point in the prioritization process and represents structures that are a priority to evaluate further through barrier assessment and habitat confirmations because some structures will likely be passable, others will not be associated with usable habitat, and others may not be feasible to remediate because of logistic considerations.The intermediate barrier list was updated following the barrier assessments and habitat confirmations that were undertaken during the 2021 field season - some barriers were moved forward to the "priority barrier list" (see @tbl-priority) and others were eliminated from consideration due to one or more of the considerations discussed above (see @tbl-removed-from-consideration). The priority barrier list represents structures that were confirmed to be partial or full barriers to fish passage and that block access to confirmed habitat. Barriers on the priority list were reviewed by planning team members and selected for inclusion for proactive pursual of remediation.  For more details on the barrier prioritization model, please see @Mazany-Wright2021-rz.
+Following field assessments, structures are placed on one of five possible lists:
+
+1.	Priority barriers list – the structure is confirmed as a full or partial barrier, has key habitat confirmed to exist upstream, and is considered actionable by the planning team (i.e., action items will be identified to advance rehabilitation of the structure). Depending on the barrier, owner, financial constraints, and quality of upstream habitat, the action may be to leave to end of life cycle before reviewing again, remove and decommission the road, replace with a new passable structure, or modify to temporarily restore connectivity (e.g., fish ladder or baffles installed; Table XX).
+
+2.	Assessed structures that remain data deficient list – some form of field assessment has been completed on the structure, but further investigation is required to confirm either the passability status or presence/suitability of upstream habitat (TABLEXX).
+
+3.	Rehabilitated barriers list – priority barriers that have been addressed (either through removal, replacement, or temporary fish passage improvement projects; Table XX) 
+
+4.	Non-actionable barriers list – the structure is confirmed to be a barrier to fish passage and have some amount/quality of habitat upstream, but the planning team will not identify actions to advance rehabilitation of the structure because of logistic considerations (e.g., financial costs), short habitat gain, or the upstream habitat is of poor quality or unsuitable in its present condition to support key life stages of the focal species (Appendix XX).
+
+5.	Excluded structures list – the structure is excluded from further consideration in subsequent ranking and work planning because the structure is confirmed passable (e.g., bridge), not present, or there is no key habitat upstream (Appendix XX).
+
+
 
 ```{r removed-from-consideration, echo = FALSE, results = 'asis'}
 #| label: tbl-removed-from-consideration
-#| tbl-cap: "List of crossings that were removed from the barrier prioritization list following field assessment. Crossings include those prioritized as part of the first iteration of the intermediate barrier list and additional sites selected by 2021 field crews that were removed following discussion with the planning team due to these structures not existing, being passable, not being associated with usable habitat, or deemed not feasible to remediate because of logistic considerations."
+#| tbl-cap: "List of structures that were removed from the barrier prioritization list following field assessment. Structures include those prioritized as part of the first iteration of the intermediate barrier list and additional sites selected by 2021 field crews that were removed following discussion with the planning team due to these structures not existing, being passable, not being associated with usable habitat, or deemed not feasible to remediate because of logistic considerations."
 #| warning: false
 #| echo: false
 
@@ -107,7 +116,7 @@ ft
 
 ```{r priority, echo = FALSE, results = 'asis'}
 #| label: tbl-priority
-#| tbl-cap: "The Bulkley River watershed priority barrier list, which includes barriers that have undergone field assessment, been reviewed by the planning team, and selected to pursue for proactive remediation."
+#| tbl-cap: "The Bulkley River watershed priority barrier for rehabilitation list, which includes barriers that have undergone field assessment, been reviewed by the planning team, and selected to pursue for proactive remediation."
 #| warning: false
 #| echo: false
 
@@ -120,7 +129,7 @@ ft <- format_flextable(ft)
 ft
 ```
 
-Thirty barriers on the intermediate list require short-term field assessments before selection as a final barrier to pursue for remediation: 
+Thirty barriers on the intermediate list require short-term field assessments before selection as a final barrier to pursue for restoration: 
 
 ```{r fieldreq, echo = FALSE, results = 'asis'}
 #| label: tbl-fieldreq
