--- a/content/data-methods.qmd
+++ b/content/data-methods.qmd
@@ -1,29 +1,9 @@
 # Data Download and Methods {-}
 
-## Modelled Anadromous Salmon Habitat Maps {-}
+## Data Download {-}
 
-High-resolution PDF maps of the Bulkley River watershed and model results can be accessed [here](https://github.com/smnorris/bcfishpass/tree/main/wcrp/pdfs). The watershed is divided into multiple maps sheets to allow for detailed examination of modelled spawning and rearing habitat and priority barriers identified through this planning process. The locations of WCRP priority barriers and associated map sheet numbers are shown below. In each individual map sheet, priority barriers are symbolized using the following notation: 
-
-![Bulkley River watershed overview map identifying the portions of the watershed covered by each map sheet (grey squares) and the prioritized barriers on the intermediate barrier list (orange points; see Appendix C).](images/overview-map-bulk.png){#fig-over}
+Coming soon.
 
 ## Connectivity Status Assessment Methods {-}
 
-The connectivity status assessment for anadromous salmonids in the Bulkley River watershed builds on existing connectivity modelling work undertaken by the BC Fish Passage Technical Working Group, resulting in a flexible, customizable open-source spatial model called ["bcfishpass"](https://github.com/smnorris/bcfishpass). The model spatially locates known and modelled barriers to fish passage, identifies potential spawning and rearing habitat for target species, and estimates the amount of habitat that is currently accessible to target species. The model uses an adapted version of the Intrinsic Potential (IP) fish habitat modelling framework (see @Sheer2009-kb for an overview of the IP framework). The habitat model uses two geomorphic characteristics of the stream network — channel gradient and mean annual discharge — to identify potential spawning habitat and rearing habitat for each target species. The habitat model does not attempt to definitively map each habitat type nor estimate habitat quality, but rather identifies stream segments that have high potential to support spawning or rearing habitat for each species based on the geomorphic characteristics of the segment. For more details on the connectivity and habitat model structure and parameters, please see @Mazany-Wright2021-rz. The variables and thresholds used to model potential spawning and rearing habitat for each target species are summarized in Table 15. The quantity of modelled habitat for each species was aggregated for each habitat type to inform the two KEAs — Accessible Spawning Habitat and Accessible Rearing Habitat — and represents a linear measure of potential habitat. To recognize the rearing value provided by features represented by polygons for certain species (e.g., wetlands for Coho Salmon and lakes for Sockeye Salmon) a multiplier of 1.5x the length of the stream segments flowing through the polygons was applied.
-
-```{r, echo = FALSE, results = 'asis'}
-#| label: tbl-param
-#| tbl-cap: "Parameters and thresholds used to inform the Intrinsic Potential habitat model for spawning and rearing habitat for each target species in the Bulkley River watershed."
-#| warning: false
-
-library("flextable")
-
-data <- read.csv("data/params-bulkley.csv", check.names=FALSE)
-ft <- flextable(data)
-ft <- bg(ft, bg = "#008270", part = "header")
-ft <- color(ft, color = "white", part = "header")
-ft <- set_caption(ft)
-ft |> autofit() 
-```
-
-[References: [1] @Busch2011-uy. [2] @Cooney2006-qf. [3] @Bjornn1991-zd. [4] @Neuman1977-wg. [5] @Woll2017-vf. [6] @Roberge2002-xq. [7] @Raleigh1986-cn. [8] @Porter2008-qd. [9] @Agrawal2005-xu. [10] @Sloat2017-bp. [11] @Mcmahon1983-rz. [12] @Rosenfeld2000-vq. [13] @Burnett2007-yv. [14] @Lake1999-tl. [15] @Hoopes1972.
-[16] @Sheer2006-bh.]{style="color: grey"}
+Coming soon.
