--- a/content/supplementary-information.qmd
+++ b/content/supplementary-information.qmd
@@ -6,13 +6,13 @@
 
 The following situation model was developed by the WCRP partnership to “map” the project context and brainstorm potential actions for implementation. Green text is used to identify actions that were selected for implementation (see 'Strategies & Actions'), and red text is used to identify actions that the project team has decided to exclude from the current iteration of the plan, given that they were either outside of the project scope or were deemed to be ineffective by the planning team. 
 
-![Situation analysis developed by the planning team to identify factors that contribute to fragmentation (orange boxes), biophysical results (brown boxes), and potential strategies/actions to improve connectivity (yellow hexagons) for target species in the Bulkley River watershed.](images/situation-analysis-bulk.png){#fig-sitan}
+![Situation analysis developed by the planning team to identify factors that contribute to fragmentation (orange boxes), biophysical results (brown boxes), and potential strategies/actions to improve connectivity (yellow hexagons) for focal species in the Bulkley River watershed.](images/situation-analysis-bulk.png){#fig-sitan}
 
 ## Strategies & Actions {-}
 
-Effectiveness evaluation of identified conservation strategies and associated actions to improve connectivity for target species in the Bulkley River watershed. The planning team identified four broad strategies to implement through this WCRP, 1) barrier remediation, 2) barrier prevention, 3) strengthen Indigenous connections to land and water, and 4) planning and progress tracking. Individual actions were qualitatively evaluated based on the anticipated effect each action will have on realizing on-the-ground gains in connectivity. Effectiveness ratings are based on a combination of "Feasibility and "Impact", Feasibility is defined as the degree to which the project team can implement the action within realistic constraints (financial, time, ethical, etc.) and Impact is the degree to which the action is likely to contribute to achieving one or more of the goals established in this plan.
+Effectiveness evaluation of identified conservation strategies and associated actions to improve connectivity for target species in the Bulkley River watershed. The planning team identified four broad strategies to implement through this WCRP, 1) barrier rehabilitation, 2) barrier prevention, 3) strengthen Indigenous connections to land and water, and 4) planning and progress tracking. Individual actions were qualitatively evaluated based on the anticipated effect each action will have on realizing on-the-ground gains in connectivity. Effectiveness ratings are based on a combination of "Feasibility and "Impact", Feasibility is defined as the degree to which the project team can implement the action within realistic constraints (financial, time, ethical, etc.) and Impact is the degree to which the action is likely to contribute to achieving one or more of the goals established in this plan.
 
-## Strategy 1: Barrier Remediation {-}
+## Strategy 1: Barrier Rehabilitation {-}
 ```{python echo=FALSE}
 #| label: tbl-S1
 #| tbl-cap: "Strategy 1"
@@ -175,7 +175,7 @@ The operational plan represents a preliminary exercise undertaken by the plannin
 
 ```{python opplan, echo=FALSE}
 #| label: tbl-opplan
-#| tbl-cap: "Operational plan to support the implementation of strategies and actions to improve connectivity for target species in the Bulkley River watershed."
+#| tbl-cap: "Operational plan to support the implementation of strategies and actions to improve connectivity for focal species in the Bulkley River watershed."
 #| warning: false
 #| echo: false
 
