Bulk_wcrp_draft3
updates to Bulkley online wcrp - draft 3

--- a/content/project-overview.qmd
+++ b/content/project-overview.qmd
@@ -41,7 +41,7 @@ The planning team compiled existing structure location and assessment data, habi
 
 ## Vision Statement {-}
 
-Healthy, well-connected stmrea network within the Bulkley River watershed support thriving populations of migratory and resident fish. In turn, these fish provide the continued sustenance, cultural, and ceremonial needs of the Wet’suwet’en and Gitxsan peoples, as they have since time immemorial. First Nations, residents, and visitors to the watershed work together for environmental stewardship to clarify, implement, and assess the effectiveness of actions to mitigate the negative effects of aquatic barriers, improving the resiliency of the stream network for the benefit and appreciation of all. 
+Healthy, well-connected stream network within the Bulkley River watershed support thriving populations of migratory and resident fish. In turn, these fish provide the continued sustenance, cultural, and ceremonial needs of the Wet’suwet’en and Gitxsan peoples, as they have since time immemorial. First Nations, residents, and visitors to the watershed work together for environmental stewardship to clarify, implement, and assess the effectiveness of actions to mitigate the negative effects of aquatic barriers, improving the resiliency of the stream network for the benefit and appreciation of all. 
 
 ## Project Scope {-}
 
