Update 02-12-2024 Added WCRP tables
Added WCRP tables created with teh API call.
Formatting is needed.
Changes to renv.lock may be needed

--- a/content/barrier-prioritization.qmd
+++ b/content/barrier-prioritization.qmd
@@ -84,7 +84,42 @@ Following field assessments, structures are placed on one of five possible lists
 
 5.	Excluded structures list – the structure is excluded from further consideration in subsequent ranking and work planning because the structure is confirmed passable (e.g., bridge), not present, or there is no key habitat upstream (Appendix XX).
 
+```{r rehab, echo = FALSE, results = 'asis'}
+#| label: tbl-confirmed
+#| tbl-cap: "Confirmed barriers"
+#| warning: false
+#| echo: false
 
+data <- read.csv("data/confirmed_barriers.csv", check.names=FALSE)
+ft <- flextable(data)
+ft <- format_flextable(ft)
+ft
+```
+
+```{r rehab, echo = FALSE, results = 'asis'}
+#| label: tbl-datadeficient
+#| tbl-cap: "Data Deficient Structures"
+#| warning: false
+#| echo: false
+
+data <- read.csv("data/assessed_strucDD.csv", check.names=FALSE)
+ft <- flextable(data)
+ft <- format_flextable(ft)
+ft
+```
+
+
+```{r rehab, echo = FALSE, results = 'asis'}
+#| label: tbl-rehabilitated
+#| tbl-cap: "Rehabilitated Structures"
+#| warning: false
+#| echo: false
+
+data <- read.csv("data/rehabilitated_barriers.csv", check.names=FALSE)
+ft <- flextable(data)
+ft <- format_flextable(ft)
+ft
+```
 
 ```{r removed-from-consideration, echo = FALSE, results = 'asis'}
 #| label: tbl-removed-from-consideration
