--- a/content/connectivity-status.qmd
+++ b/content/connectivity-status.qmd
@@ -8,7 +8,13 @@ import python.connectivity_assess as conn_table
 
 warnings.filterwarnings('ignore')
 ```
+```{r}
+#| echo: false
+#| warning: false
 
+library(reticulate)
+
+```
 # Connectivity Status Assessment and Goals {-}
 
 ## Connectivity Status Assessment {-}
