bulkley_wcrp_online_updates_dec_03
Updates to bulkley wcrp online

--- a/content/project-overview.qmd
+++ b/content/project-overview.qmd
@@ -351,7 +351,7 @@ There are numerous types of lateral barriers that potentially occur in the water
 
 ### Natural Barriers {-}
 
-Natural barriers to fish passage can include debris flows, log jams, sediment deposits, etc., but natural features that have always restricted fish passage (e.g., waterfalls) are not considered under this barrier type. Natural barriers are difficult to include in a spatial prioritization framework due to their transient nature. The planning team felt that the extent of natural barriers in the watershed is seasonal and fluctuates with freshet flow levels. Both current and historic land-use practices, including historic mining and current forest-harvesting impacts, have created sediment wedges that can act as significant barriers to anadromous salmonids. Due to the nature of these land-use practices, the severity of natural barriers was rated as High and the irreversibility as Medium, the latter due to the nature of what would be required to rectify poor land-use practices at a watershed scale. Overall, the planning team felt that a pressure rating of Medium adequately captured the effects of natural barriers.
+Natural barriers to fish passage can include debris flows, log jams, sediment deposits, etc., but natural features that have always restricted fish passage (e.g., waterfalls) are not considered under this structure type. Natural barriers are difficult to include in a spatial prioritization framework due to their transient nature. The planning team felt that the extent of natural barriers in the watershed is seasonal and fluctuates with freshet flow levels. Both current and historic land-use practices, including historic mining and current forest-harvesting impacts, have created sediment wedges that can act as significant barriers to anadromous salmonids. Due to the nature of these land-use practices, the severity of natural barriers was rated as High and the irreversibility as Medium, the latter due to the nature of what would be required to rectify poor land-use practices at a watershed scale. Overall, the planning team felt that a pressure rating of Medium adequately captured the effects of natural barriers.
 
 ### Large Dams (>3m height) and Small Dams (<3m height) {-}
 
