--- a/content/barrier-prioritization.qmd
+++ b/content/barrier-prioritization.qmd
@@ -20,7 +20,7 @@ source("Rscripts/table_formatting.R")
 # Structure Prioritization {-}
 
 ## Field Assessment Ranking Process {-}
-A primary outcome of the WCRP will be the rehabilitation of barriers to connectivity in the Bulkley River Watershed. To achieve the goals in this plan, it is necessary to identify a suite of barriers that, if rehabilitated, will provide access to a minimum of 86 km of spawning habitat and 211 km of rearing habitat (@tbl-table16):
+A primary outcome of the WCRP will be the rehabilitation of barriers to connectivity in the Bulkley River Watershed. To achieve the goals in this plan, it is necessary to identify a set of structures that, if rehabilitated, will provide access to a minimum of 86 km of spawning habitat and 211 km of rearing habitat (@tbl-table16):
 
 ```{python echo=FALSE}
 #| label: tbl-table16
@@ -67,7 +67,7 @@ styled_df.set_table_styles(table_styles)
 
 After all existing data and knowledge are collated for known and modelled crossings, an iterative ranking process is conducted to help confirm barriers to target for rehabilitation to meet the goals. The ranking process is primarily used to guide field assessments and maximize efficiency in ground truthing data inputs and model outputs, while providing a secondary purpose to evaluate the relative key habitat gains of confirmed barriers in the watershed. This process, combined with input from local knowledge holders and experts, is used to develop field plans for assessing barriers that have the potential to block the most key habitat in the watershed.
 Field assessments are based on the [BC Fish Passage Strategic Approach](https://www2.gov.bc.ca/assets/gov/environment/plants-animals-and-ecosystems/fish-fish-habitat/fish-passage/strategic20approach20july202014.pdf) and can include a barrier assessment (i.e., evaluating passability of the structure), a habitat confirmation (i.e., evaluation of whether the upstream habitat is suitable for the focal species and whether there are other undocumented anthropogenic or natural barriers upstream or downstream), or a detailed habitat investigation (e.g., a fish passage study or further in-depth analysis of habitat features in a waterbody).
-The ranking process accounts for the long-term and immediate potential habitat gains potentially offered by each structure to identify structures that maximize long-term and immediate potential to improve key habitat connectivity in the watershed. All structures in the watershed (excluding those confirmed as passable) are ranked in each iteration of the ranking process. Details of the ranking process used to guide field assessments can be found in Appendix XX.
+The ranking process accounts for the long-term and immediate potential habitat gains potentially offered by each structure to identify structures that maximize long-term and immediate potential to improve key habitat connectivity in the watershed. All structures in the watershed (excluding those confirmed as passable) are ranked in each iteration of the ranking process. Details of the ranking process used to guide field assessments can be found in  [Appendix B](supplimentary-information.qmd).
 
 
 ## Structure Prioritization Summary {-}
@@ -80,9 +80,9 @@ Following field assessments, structures are placed on one of five possible lists
 
 3.	Rehabilitated barriers list – priority barriers that have been addressed (either through removal, replacement, or temporary fish passage improvement projects; Table XX) 
 
-4.	Non-actionable barriers list – the structure is confirmed to be a barrier to fish passage and have some amount/quality of habitat upstream, but the planning team will not identify actions to advance rehabilitation of the structure because of logistic considerations (e.g., financial costs), short habitat gain, or the upstream habitat is of poor quality or unsuitable in its present condition to support key life stages of the focal species (Appendix XX).
+4.	Non-actionable barriers list – the structure is confirmed to be a barrier to fish passage and have some amount/quality of habitat upstream, but the planning team will not identify actions to advance rehabilitation of the structure because of logistic considerations (e.g., financial costs), short habitat gain, or the upstream habitat is of poor quality or unsuitable in its present condition to support key life stages of the focal species [Appendix C](data-methods.qmd).
 
-5.	Excluded structures list – the structure is excluded from further consideration in subsequent ranking and work planning because the structure is confirmed passable (e.g., bridge), not present, or there is no key habitat upstream (Appendix XX).
+5.	Excluded structures list – the structure is excluded from further consideration in subsequent ranking and work planning because the structure is confirmed passable (e.g., bridge), not present, or there is no key habitat upstream [Appendix C](data-methods.qmd).
 
 ```{r rehab, echo = FALSE, results = 'asis'}
 #| label: tbl-confirmed
@@ -164,7 +164,7 @@ ft <- format_flextable(ft)
 ft
 ```
 
-Thirty barriers on the intermediate list require short-term field assessments before selection as a final barrier to pursue for restoration: 
+Thirty barriers on the intermediate list require short-term field assessments before selection as a final barrier to pursue for rehabilitation: 
 
 ```{r fieldreq, echo = FALSE, results = 'asis'}
 #| label: tbl-fieldreq
@@ -180,11 +180,11 @@ ft <- format_flextable(ft)
 ft
 ```
 
-Based on the results of the prioritization analysis, 30 barriers from the intermediate barrier list are required to be remediated to achieve the connectivity goals in this plan:
+Based on the results of the prioritization analysis, 30 barriers from the intermediate barrier list are required to be rehabilitated to achieve the connectivity goals in this plan:
 
 ```{r remcost, echo = FALSE, results = 'asis'}
 #| label: tbl-remcost
-#| tbl-cap: "Preliminary barrier remediation cost estimate to reach connectivity goals in the Bulkley River watershed. Cost per barrier values are estimated based on the average cost of previously completed projects. Barrier counts and total costs are subject to change as more information is collected through the implementation of this plan."
+#| tbl-cap: "Preliminary barrier rehabilitation cost estimate to reach connectivity goals in the Bulkley River watershed. Cost per barrier values are estimated based on the average cost of previously completed projects. Barrier counts and total costs are subject to change as more information is collected through the implementation of this plan."
 #| warning: false
 #| echo: false
 
