--- a/content/supplementary-information.qmd
+++ b/content/supplementary-information.qmd
@@ -10,7 +10,7 @@ The following situation model was developed by the WCRP partnership to “map”
 
 ## Strategies & Actions {-}
 
-Effectiveness evaluation of identified conservation strategies and associated actions to improve connectivity for focal species in the Bulkley River watershed. The planning team identified four broad strategies to implement through this WCRP, 1) barrier rehabilitation, 2) barrier prevention, 3) strengthen Indigenous connections to land and water, and 4) planning and progress tracking. Individual actions were qualitatively evaluated based on the anticipated effect each action will have on realizing on-the-ground gains in connectivity. Effectiveness ratings are based on a combination of "Feasibility and "Impact", Feasibility is defined as the degree to which the project team can implement the action within realistic constraints (financial, time, ethical, etc.) and Impact is the degree to which the action is likely to contribute to achieving one or more of the goals established in this plan.
+Effectiveness evaluation of identified conservation strategies and associated actions to improve freshwater connectivity for focal species in the Bulkley River watershed. The planning team identified four broad strategies to implement through this WCRP, 1) barrier rehabilitation, 2) barrier prevention, 3) strengthen Indigenous connections to land and water, and 4) planning and progress tracking. Individual actions were qualitatively evaluated based on the anticipated effect each action will have on realizing on-the-ground gains in connectivity. Effectiveness ratings are based on a combination of "Feasibility and "Impact", Feasibility is defined as the degree to which the project team can implement the action within realistic constraints (financial, time, ethical, etc.) and Impact is the degree to which the action is likely to contribute to achieving one or more of the goals established in this plan.
 
 ## Strategy 1: Barrier Rehabilitation {-}
 ```{python echo=FALSE}
@@ -163,9 +163,9 @@ data.set_table_styles(
 
 ## Theories of Change & Objectives {-}
 
-Theories of Change are explicit assumptions around how the identified actions will achieve gains in connectivity and contribute towards reaching the goals of the plan. To develop Theories of Change, the planning team developed explicit assumptions for each strategy which helped to clarify the rationale used for undertaking actions and provided an opportunity for feedback on invalid assumptions or missing opportunities. The Theories of Change are results oriented and clearly define the expected outcome. The following theory of change models were developed by the WCRP planning team to “map” the causal (“if-then”) progression of assumptions of how the actions within a strategy work together to achieve project goals. 
+Theories of Change are explicit assumptions around how the identified actions will achieve gains in freshwater connectivity and contribute towards reaching the goals of the plan. To develop Theories of Change, the planning team developed explicit assumptions for each strategy which helped to clarify the rationale used for undertaking actions and provided an opportunity for feedback on invalid assumptions or missing opportunities. The Theories of Change are results oriented and clearly define the expected outcome. The following theory of change models were developed by the WCRP planning team to “map” the causal (“if-then”) progression of assumptions of how the actions within a strategy work together to achieve project goals. 
 
-![Theory of change developed by the planning team for the actions identified under Strategy 1: Barrier Remediation in the Bulkley River watershed.](images/flowchart-crossing-rem-bulk.png){#fig-stra1}
+![Theory of change developed by the planning team for the actions identified under Strategy 1: Barrier Rehabilitation in the Bulkley River watershed.](images/flowchart-crossing-rem-bulk.png){#fig-stra1}
 
 ![Theory of change developed by the planning team for the actions identified under Strategy 2: Barrier Prevention in the Bulkley River watershed.](images/flowchart-lat-bar-rem-bulk.png){#fig-stra2}
 
