--- a/index.qmd
+++ b/index.qmd
@@ -2,8 +2,8 @@
 
 ## Acknowledgements {-}
 
-This plan represents the culmination of a collaborative planning process undertaken in the Bulkley River watershed over many months of work with a multi-partner planning team of individuals and groups passionate about the conservation and restoration of freshwater ecosystems and the species they support. Plan development was funded by the BC Salmon Restoration and Innovation Fund and the RBC Bluewater Project. We were fortunate to benefit from the feedback, guidance, and wisdom of many groups and individuals who volunteered their time throughout this process — this publication would not have been possible without the engagement of our partners and the planning team. (see @tbl-planteam). 
+This plan represents the culmination of a collaborative planning process undertaken in the Bulkley River watershed over many months of work with a multi-partner planning team of individuals and groups passionate about the conservation and restoration of freshwater ecosystems and the species they support. Plan development was funded by the [BC Salmon Restoration and Innovation Fund](https://www.dfo-mpo.gc.ca/fisheries-peches/initiatives/fish-fund-bc-fonds-peche-cb/index-eng.html) and the RBC Bluewater Project. We were fortunate to benefit from the feedback, guidance, and wisdom of many groups and individuals who volunteered their time throughout this process — this publication would not have been possible without the engagement of our partners and the planning team (see @tbl-planteam). 
 
-We recognize the incredible fish passage and connectivity work that has occurred in the Bulkley River watershed to date, and we are excited to continue partnering with local groups and organizations to build up existing initiatives and provide a road map to push connectivity remediation forward over the next 10 years and beyond
+We recognize the incredible fish passage and connectivity work that has occurred in the Bulkley River watershed to date, and we are excited to continue partnering with local groups and organizations to build up existing initiatives and provide a road map to push connectivity restoration forward over the next 10 years and beyond
 
 The Canadian Wildlife Federation recognizes that the lands and waters that form the basis of this plan are the traditional unceded territory of the Wet'suwet'en and Gitxsan peoples. We are grateful for the opportunity to learn from the stewards of this land and work together to benefit Pacific Salmon and Steelhead. A special thank you to Dallas Nikal, Mike Ridsdale, and Elaine Sampson for sharing the traditional Witsuwit'en and Gitxsanimax names used in this plan.
